src/objects/Rollup_Definition__mdt.object
<CustomObject>
    <fields>
        <fullName>Attribution_Field__c</fullName>
        <label>Attribution Field</label>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Rollup_Definitions</relationshipLabel>
        <relationshipName>Rollup_Definitions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Attribution_Object__c</fullName>
        <label>Attribution Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Rollup_Definitions2</relationshipLabel>
        <relationshipName>Rollup_Definitions2</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detail_Attribution_Field__c</fullName>
        <label>Detail Attribution Field</label>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Rollup_Definitions1</relationshipLabel>
        <relationshipName>Rollup_Definitions1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Detail_Object__c</fullName>
        <label>Detail Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Rollup_Definitions1</relationshipLabel>
        <relationshipName>Rollup_Definitions1</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Summary_Object__c</fullName>
        <label>Summary Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Rollup_Definitions</relationshipLabel>
        <relationshipName>Rollup_Definitions</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Rollup Definition</label>
    <pluralLabel>Rollup Definitions</pluralLabel>
</CustomObject>